# ggj2020

./: .gitignore  .gitmodules  CMakeLists.txt  IDEA.md  PROTOCOL.md  README.md
code/: client.cc  config.h.in  main.cc  server.cc
code/bits/: Chat.cc  Chat.h  ClientNetwork.cc  ClientNetwork.h  Communication.cc  Communication.h  ConnectionScene.cc  ConnectionScene.h  Constants.h  GameFactory.h  GameInstance.cc  GameInstance.h  GameSettings.h  ImGuiConstants.h  IntroScene.cc  IntroScene.h  LobbyScene.cc  LobbyScene.h  MenuEntity.cc  MenuEntity.h  Protocol.h  ProtocolBytes.h  ProtocolData.h  RoomScene.cc  RoomScene.h  Scenes.cc  Scenes.h  ServerGroup.cc  ServerGroup.h  ServerLobby.cc  ServerLobby.h  ServerNetwork.cc  ServerNetwork.h  ServerPlayer.cc  ServerPlayer.h  ServerRoom.cc  ServerRoom.h  WaitingScene.cc  WaitingScene.h
code/bits/client/: BackgroundEntity.cc  BackgroundEntity.h  Chat.cc  Chat.h  ClientNetwork.cc  ClientNetwork.h  ClientPlayerData.h  ConnectionScene.cc  ConnectionScene.h  CreditsScene.cc  CreditsScene.h  GameChat.cc  GameChat.h  GameModel.h  GameScene.cc  GameScene.h  HelpScene.cc  HelpScene.h  IntroScene.cc  IntroScene.h  LobbyChat.cc  LobbyChat.h  LobbyScene.cc  LobbyScene.h  MenuEntity.cc  MenuEntity.h  PlayerInfo.cc  PlayerInfo.h  ResourceManager.cc  ResourceManager.h  RoomScene.cc  RoomScene.h  Scenes.cc  Scenes.h  ShipEntity.cc  ShipEntity.h  Singletons.cc  Singletons.h  SplashScreenEntity.cc  SplashScreenEntity.h  (+9 more)
code/bits/common/: Constants.h  GameSettings.h  ImGuiConstants.h  PemProtocol.h  PemTypes.h  Protocol.h  ProtocolBytes.h  ProtocolData.h
code/bits/server/: Crew.cc  Crew.h  Deck.cc  Deck.h  GameFactory.cc  GameFactory.h  GameInstance.cc  GameInstance.h  Member.h  PemFactory.cc  PemFactory.h  PemInstance.cc  PemInstance.h  ServerGroup.cc  ServerGroup.h  ServerLobby.cc  ServerLobby.h  ServerNetwork.cc  ServerNetwork.h  ServerPlayer.h  ServerRoom.cc  ServerRoom.h  Ship.cc  Ship.h  Timer.h
data/pax_et_mors/: atlas.xml
data/raw/: montage.sh
data/raw/animation_engine/: montage.sh
data/raw/animations/: .gitignore  crop.sh  montage.sh  rename.sh  texture_info.json
data/raw/cards/: montage.sh
data/tmpgame/: atlas.xml
tool/: AutoBuildAndRun.sh
